# zkwasm_rock-paper-scissors

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/api/: index.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Game.tsx
frontend/src/components/ui/: BorderBeam.tsx  ShineBorders.tsx
frontend/src/detection/core/: gesture-detector.ts
frontend/src/detection/game/: game.ts
frontend/src/detection/hand-figure/: hand-figure-scene.ts
frontend/src/detection/video/: VideoScene.tsx  video-scene.ts
frontend/src/provider/: AppKitProvider.tsx  PlayerProvider.tsx  RpcProvider.tsx
game/: Cargo.toml  Makefile
game/src/: state.rs
game/ts/: package-lock.json  package.json
rock-paper-scissors-rollup/: Makefile
rock-paper-scissors-rollup/src/: state.rs
rock-paper-scissors-rollup/ts/src/: api.ts  query.ts  test.ts
src/: App.tsx  index.css
turbo_rps/: Cargo.toml
turbo_rps/src/: lib.rs
