[package]
name = "tok-zkwasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "tok_zkwasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
primitive-types = {version="0.12.1", default-features = false}
lazy_static = "1.4.0"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git", default-features = true }
wasm-bindgen = "0.2.91"
serde-wasm-bindgen = "0.5" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
zkwasm-rest-abi = { git = "https://github.com/DelphinusLab/zkwasm-typescript-mini-server" }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }